crates/locus-core/tests/common/snapshots/regression_render_tag_robustness__common__hub__hub_locus_v1_high_iso_1920x1080.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 474
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.062
  mean_reprojection_rmse: 0.0541
  p50_translation_error: 0.0002
  p90_translation_error: 0.0009
  p99_translation_error: 0.0212
  p50_rotation_error: 0.0147
  p90_rotation_error: 0.068
  p99_rotation_error: 0.2014
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders: []
