crates/locus-core/tests/common/snapshots/regression_render_tag_robustness__common__hub__hub_locus_v1_low_key_1920x1080.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 473
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.12
  mean_precision: 1
  mean_rmse: 0.0223
  mean_reprojection_rmse: 0.0213
  p50_translation_error: 0.001
  p90_translation_error: 0.0049
  p99_translation_error: 0.0049
  p50_rotation_error: 0.0753
  p90_rotation_error: 0.5642
  p99_rotation_error: 0.5642
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0000_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0001_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0002_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0003_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0004_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
