crates/locus-core/tests/common/snapshots/regression_render_tag_robustness__common__hub__hub_locus_v1_low_key_1920x1080_tuned.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 473
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.2
  mean_precision: 1
  mean_rmse: 0.2157
  mean_reprojection_rmse: 0.1008
  p50_translation_error: 0.0011
  p90_translation_error: 0.0141
  p99_translation_error: 0.0278
  p50_rotation_error: 0.33
  p90_rotation_error: 3.7162
  p99_rotation_error: 99.3192
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0000_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0001_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0002_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0003_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0004_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
