crates/locus-core/tests/common/snapshots/regression_render_tag_robustness__common__hub__hub_locus_v1_raw_pipeline_1920x1080.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 473
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.58
  mean_precision: 1
  mean_rmse: 0.3694
  mean_reprojection_rmse: 0.2701
  p50_translation_error: 0.0018
  p90_translation_error: 0.0115
  p99_translation_error: 0.0406
  p50_rotation_error: 0.0556
  p90_rotation_error: 0.197
  p99_rotation_error: 0.2831
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0002_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0003_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0004_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0005_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0006_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
