crates/locus-core/tests/common/snapshots/regression_render_tag_robustness__common__hub__hub_locus_v1_raw_pipeline_1920x1080_tuned.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.62
  mean_precision: 1
  mean_rmse: 0.6524
  mean_reprojection_rmse: 0.5135
  p50_translation_error: 0.0017
  p90_translation_error: 0.012
  p99_translation_error: 0.0461
  p50_rotation_error: 0.186
  p90_rotation_error: 0.5901
  p99_rotation_error: 26.0382
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0002_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0003_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0005_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0006_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0007_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
