crates/locus-core/tests/common/snapshots/regression_render_tag_robustness__common__hub__hub_locus_v1_tag16h5_1920x1080_tuned.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 100
  mean_recall: 1
  mean_precision: 0.975
  mean_rmse: 0.7598
  mean_reprojection_rmse: 0.7339
  p50_translation_error: 0.0054
  p90_translation_error: 0.0299
  p99_translation_error: 0.117
  p50_rotation_error: 0.2696
  p90_rotation_error: 0.7076
  p99_rotation_error: 17.467
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0053_cam_0000.png
      missed: 0
      extra: 1
      rmse: 0.8701
    - filename: scene_0059_cam_0000.png
      missed: 0
      extra: 1
      rmse: 0.8575
    - filename: scene_0029_cam_0000.png
      missed: 0
      extra: 1
      rmse: 0.7303
    - filename: scene_0074_cam_0000.png
      missed: 0
      extra: 1
      rmse: 0.6219
    - filename: scene_0050_cam_0000.png
      missed: 0
      extra: 1
      rmse: 0.6134
